<resources>
	<string name="app_name">Shamshara</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	<string name="log_in">Log In</string>
	<string name="please_log_in">Please Log In</string>
	<string name="message">message:</string>
	<string name="create_account">Create Account</string>
	<string name="create_account_prompt">Don\'t have an account?</string>
	<string name="password">Password</string>
	<string name="username">Username</string>
	<string name="email">Email</string>
	<string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
	<string name="generate_background_color">Generate background color</string>
	<string name="log_out">Log Out</string>
	<string name="channel_name">Channel Name</string>
	<string name="channel_description">Channel Description</string>
	<string name="add_channel">Add Channel</string>
	<string name="channel_name_format"># %s</string>
</resources>
