<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="@dimen/dp_16"
	android:layout_marginBottom="@dimen/dp_16"
	android:layout_marginStart="@dimen/dp_16"
	android:layout_marginEnd="@dimen/dp_16"
	android:paddingTop="@dimen/dp_24"
	android:paddingBottom="@dimen/dp_24"
	android:orientation="vertical">

	<android.support.v7.widget.AppCompatTextView
		android:id="@+id/title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/dp_8"
		android:layout_marginBottom="@dimen/dp_8"
		android:textSize="18sp"
		android:textAlignment="center"
		android:text="@string/add_channel"
		/>

	<android.support.v7.widget.AppCompatEditText
		android:id="@+id/add_channel_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/dp_8"
		android:layout_marginBottom="@dimen/dp_8"
		android:layout_marginStart="@dimen/dp_16"
		android:layout_marginEnd="@dimen/dp_16"
		android:hint="@string/channel_name"
		/>

	<android.support.v7.widget.AppCompatEditText
		android:id="@+id/add_channel_description"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/dp_8"
		android:layout_marginBottom="@dimen/dp_8"
		android:layout_marginStart="@dimen/dp_16"
		android:layout_marginEnd="@dimen/dp_16"
		android:hint="@string/channel_description"/>
</LinearLayout>